--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ Pillow==2.7.0
 pylint==1.4.1
 pytz==2014.10
 six==1.9.0
+git+https://github.com/joestump/django-ajax.git@07980a58ed044a65a886ab4cf570f6a39f2b9e04
+oauthlib==0.7.2
+PyJWT==0.4.1
+python-openid==2.2.5
+python-social-auth==0.2.2
+requests==2.5.3
+requests-oauthlib==0.4.2
