fixed some dumb IIS specific stuff for test azure deployments. Won't be relevant in a live environment.

--- a/web.config
+++ b/web.config
@@ -26,6 +26,8 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="%INTERPRETERPATH%|%WFASTCGIPATH%" resourceType="Unspecified" requireAccess="Script" />
+      <clear/>
+      <add name="StaticFile" path="*" verb="*" modules="StaticFileModule" resourceType="File" requireAccess="Read" />
     </handlers>
     <rewrite>
       <rules>
