Azure, why you hate me sometimes

--- a/web.config
+++ b/web.config
@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
+<!-- Generated web.config for Microsoft Azure. Remove this comment to prevent
+     modifications being overwritten when publishing the project.
+-->
 <configuration>
   <system.diagnostics>
     <trace>
@@ -23,8 +26,6 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="%INTERPRETERPATH%|%WFASTCGIPATH%" resourceType="Unspecified" requireAccess="Script" />
-      <clear/>
-      <add name="StaticFile" path="*" verb="*" modules="StaticFileModule" resourceType="File" requireAccess="Read" />
     </handlers>
     <rewrite>
       <rules>
