--- a/web.debug.config
+++ b/web.debug.config
@@ -1,3 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <system.webServer>
+    <!-- this configuration overrides the FastCGI handler to let IIS serve the static files -->
+    <handlers>
+      <clear/>
+      <add name="StaticFile" path="*" verb="*" modules="StaticFileModule" resourceType="File" requireAccess="Read" />
+    </handlers>
+  </system.webServer>
 </configuration>
